--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 header {
     text-align: center;
 }
-.container-container {
+.grid-container {
+    display: grid;
+    grid-template-rows: repeat(3, 33%);
+    grid-template-areas: 'info cont stuff';
+}
+
+#info {
+    margin-left: 2vw;
+    padding-left: 1vw;
+    border: 1px solid black;
+    grid-area: info;
+}
+
+.container {
     width: 380px; 
     margin-left: auto; 
     margin-right: auto;
+    grid-area: cont;
 }
 
-#grid-container {
+#game-container {
     display: grid;
     
     grid-template-columns: repeat(7, 50px);
@@ -15,8 +29,6 @@ header {
 
     grid-gap: 5px;
     text-align: center;
-
-    grid-area: cont;
 }
 
 .item {
